--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
 after_success:
   - docker build -t nuge/multi-client ./client
   - docker build -t nuge/multi-nginx ./nginx
-  - docker build -t nuge/mulit-server ./server
+  - docker build -t nuge/multi-server ./server
   - docker build -t nuge/multi-worker ./worker
   # Log in to docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
