--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,23 @@ after_success:
   - docker build -t nuge/multi-nginx ./nginx
   - docker build -t nuge/multi-server ./server
   - docker build -t nuge/multi-worker ./worker
-  # Log in to docker CLI
+  # Log in to the docker CLI
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
   - docker push nuge/multi-client
   - docker push nuge/multi-nginx
   - docker push nuge/multi-server
   - docker push nuge/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: us-west-1
+  app: multi-docker
+  env: MultiDocker-env
+  bucket_name: elasticbeanstalk-us-west-1-306476627547
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
